feat: update pagination handling and improve API response structure
- Changed default page number from 0 to 1 in useViewParams hook.
- Updated setSize and setSort functions to maintain page number at 1.
- Added utility functions for converting between UI and API pagination formats.
- Enhanced clientFetch to support skipping toast notifications on errors.
- Improved error handling and logging in AuthController during login and logout.
- Introduced CategoryExcelHelper for handling category imports from Excel files.
- Implemented scheduled task to clean up old audit logs.
- Added new fields to BarcodeScan entity and updated related mappers.
- Enhanced ProductService to support filtering and pagination with stable sorting.
- Updated application properties to enable one-indexed pagination parameters.